alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_1.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid shared object name
 | 
 | noso
 | ^
 | 
 = note: Parser failed with the following error:
error: invalid suffix
 | 
 | noso
 |     ^ expected shared object name suffix '.so'
